recursion.cons.remove.Remove.scala.error
Erreur de compilation :
Remove:7: error: type mismatch;
 found   : List[Int]
 required: Int
  return l :: remove(l.tail,v)
           ^