recursion.cons.remove.Remove.scala.code
def remove(l:List[Int], v:Int): List[Int] = {
  
  
  
  if(l.head == v)
  return l :: remove(l.tail,v)
  else
  return l.head :: remove(l.tail,v)
  
}
